# burdenTests

./: .gitignore  CMakeLists.txt  burdenUnitTest.m
burdenTest/: #Makefile#  CMakeLists.txt  CMakeLists.txt~  Makefile  Readme.txt  cast.hpp  davies.cpp  davies.hpp  genericBurdenTest.cpp  genericBurdenTest.hpp  gtest.cpp  input.cpp  input.hpp  main.cpp  output.cpp  output.hpp  skat.cpp  skat.hpp  test.vcf  test3.vcf  wsbt.cpp  wsbt.hpp
burdenTest.xcodeproj/: project.pbxproj
burdenTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
burdenTest.xcodeproj/xcuserdata/corinthummel.xcuserdatad/xcschemes/: xcschememanagement.plist
burdenTest/gsl/: Makefile
burdenTest/src/: CMakeLists.txt  CMakeLists.txt~  cast.cpp  dataCollector.cpp  dataCollector.hpp  davies.cpp  davies.hpp  geneInfo.cpp  gtest.cpp  input.cpp  input.hpp  main.cpp  output.cpp  output.hpp  skat.cpp  skat.hpp  wsbt.cpp  wsbt.hpp
src/: CMakeLists.txt  annotationWeights.py  cast.cpp  cast.hpp  cdflib.cpp  dataCollector.cpp  dataCollector.hpp  davies.cpp  davies.hpp  geneInfo.cpp  input.cpp  input.hpp  iobioDriver.cpp  main.cpp  skat.cpp  skat.hpp  skato.cpp  skato.hpp  svm.cpp  svm.hpp  wsbt.cpp  wsbt.hpp
